[package]
name = "navan"
version = "0.1.0"
edition = "2021"
description = "Rust type bindings for the Navan (formerly TripActions) Bookings API"
license = "MIT"
repository = "https://github.com/versa-protocol/navan"
keywords = ["navan", "tripactions", "travel", "bookings", "api"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
